--- a/templates/index.html
+++ b/templates/index.html
@@ -97,10 +97,10 @@
 <ul> 
 <h3>
 Piyush Maurya<br>
-798445887
+7985445887
 <br>
 </h3>
-<li>If there is any Problem Please Refresh this Page then and Enter the Correct Details:</li>
+<li>If there is any Problem Please Refresh this Page  and then Enter the Correct Details:</li>
 </ul>
 
 </body>
